# FastAPI-LangGraph-MCP-Starter

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  mcp_servers.json  pyproject.toml
alembic/: README  env.py
alembic/versions/: 8d5f2180dfa5_initial_migration.py
app/: __init__.py  config.py  main.py
app/agent/: __init__.py  checkpointer.py  graph.py  nodes.py  state.py
app/api/: __init__.py  routes.py  schemas.py  streaming.py
app/core/: auth.py  llm_factory.py  logging.py  rate_limit.py  tracing.py
app/db/: __init__.py  models.py  session.py
app/mcp/: __init__.py  client.py  server.py
app/mcp/tools/: calculator.py  todo.py  todo_simple.py  weather.py
tests/: conftest.py  test_agent.py  test_api.py  test_mcp.py  test_streaming.py
